# benchmark-tools

./: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  spec.md
docs/: improvement_plan.md
sandbox/: Dockerfile  README.md  pyproject.toml
src/core/: admin.py  apps.py  benchmark.py  models.py  urls.py
src/core/fixtures/: data.jsonl  llm_model.jsonl  study_polars2.jsonl
src/core/migrations/: 0001_initial.py  0002_item_answer_code_item_title_alter_item_answer_and_more.py  0002_remove_llmmodel_uniq_llmmodel_model_base_url_and_more.py  0003_item_re_output_alter_item_answer_code.py  0004_alter_result_result.py
src/core/templates/admin/core/result/: change_list.html
src/core/tests/: test_admin.py  test_benchmark.py
src/locale/ja/LC_MESSAGES/: django.po
src/project/: settings.py  urls.py
src/theme/: apps.py
src/theme/templates/: base.html
