[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu.saito@moai-lab.jp"},
]
dependencies = []
description = "Add your description here"
name = "benchmark-tools"
readme = "README.md"
requires-python = ">=3.14"
version = "0.1.0"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.11,<0.12.0"]
